[MESOS][SPARK-23464] Fix Mesos Cluster Scheduler to allow configs containing spaces and quotes