@@ -199,6 +199,31 @@ class MesosClusterSchedulerSuite extends SparkFunSuite with LocalSparkContext wi
     })
   }
 
+  test("can pass config with spaces and quotes") {
+    setScheduler()
+
+    val mem = 1000
+    val cpu = 1
+
+    val response = scheduler.submitDriver(
+      new MesosDriverDescription("d1", "jar", mem, cpu, true,
+        command,
+        Map("spark.mesos.executor.home" -> "test",
+          "spark.app.name" -> "test",
+          "spark.driver.extraJavaOptions" ->
+            "-XX:+PrintGC -Dkey=value -Dnum=\"one two\""),
+        "s1",
+        new Date()))
+    assert(response.success)
+
+    val offer = Utils.createOffer("o1", "s1", mem, cpu)
+    scheduler.resourceOffers(driver, List(offer).asJava)
+    val tasks = Utils.verifyTaskLaunched(driver, "o1")
+    val driverCmd = tasks.head.getCommand.getValue
+    assert(driverCmd.contains(
+      "--conf spark.driver.extraJavaOptions=\"-XX:+PrintGC -Dkey=value -Dnum=\\\"one two\\\"\" "))
+  }
+
   test("supports spark.mesos.driverEnv.*") {
     setScheduler()
 
